# s2-mpi-example

./: CMakeLists.txt  README.md
src/: main.c
