cmake_minimum_required(VERSION 3.9)
project(mpi_example C)
set(CMAKE_C_COMPILER /usr/bin/mpicc)
set(CMAKE_C_STANDARD 11)
set(SRC_DIR src)
set(SRC_FILES ${SRC_DIR}/main.c)
set(BUILD_DIR build)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O0 -g")
add_executable(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME})
